# omniasr-server

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  build.sh  main.py  pyproject.toml  schemas.py  server.py
app/: config.py  exceptions.py  handlers.py  languages.py  routes.py  schemas.py  server.py  service.py
scripts/: openai_client.py  preload.py
tests/: test_languages.py  test_routes.py  test_service.py
